root_extra_deps = [ "//v8:v8_maybe_snapshot" ]
is_electron_build = true
is_component_build = false
is_official_build = true
symbol_level = 2
enable_nacl = false
enable_widevine = true

# CFI is disabled for the time being, as Electron is not a monolithic binary
# with at least one shared library component (Node) and CFI is tricky in that
# scenario
is_cfi = false

# Always use the system provided standard library
use_custom_libcxx = false

# Jumbo build should improve compilation times.
# https://chromium.googlesource.com/chromium/src/+/master/docs/jumbo.md
use_jumbo_build = true

# This is required by Node.js
# See https://github.com/nodejs/node/pull/13242
v8_promise_internal_field_count = 1

# Suppress the linking warning for arm64:
# warning: libfreetype.so.6, needed by ../../build/linux/debian_jessie_arm64-sysroot/usr/lib/aarch64-linux-gnu/libfontconfig.so, may conflict with libfreetype.so.6
if (target_cpu == "arm64") {
  fatal_linker_warnings = false
}

is_debug = false
enable_linux_installer = false
v8_use_snapshot = true
v8_enable_i18n_support = false
if (target_cpu == "arm") {
  v8_snapshot_toolchain="//build/toolchain/linux:clang_arm"
}

if (target_cpu == "arm64") {
  v8_snapshot_toolchain="//build/toolchain/linux:clang_arm64"
}
